<resources>
    <string name="app_name">CryptoPortfolio</string>
    <string name="change_24">24hr</string>
    <string name="action_settings">Settings</string>

    <string name="bitcoin">Bitcoin (BTC)</string>
    <string name="ethereum">Ethereum (ETH)</string>
    <string name="litecoin">Litecoin (LTC)</string>
    <string name="unikoingold">Unikoin Gold (UKG)</string>
    <string name="ripple">Ripple (XRP)</string>
    <string name="bitcoin_cash">Bitcoin Cash (BCH)</string>
    <string name="dash">Dash (DASH)</string>


    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_chart">ChartActivity</string>

    <string-array name="currency_array">
        <item>USD</item>
    </string-array>

</resources>
