<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dmbauer.cryptoportfolio.CoinAddActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/bitcoin"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_btc"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginEnd="24dp"
        android:hint="Enter BTC Owned"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/enter_eth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/ethereum"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/enter_eth"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginEnd="24dp"
        android:hint="Enter ETH Owned"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/enter_bch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_btc" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/bitcoin_cash"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/enter_bch"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginEnd="24dp"
        android:hint="Enter BCH Owned"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/enter_xrp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_eth" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/ripple"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/enter_xrp"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginEnd="24dp"
        android:hint="Enter XRP Owned"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/enter_dash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_bch" />

    <EditText
        android:id="@+id/enter_dash"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginEnd="24dp"
        android:hint="Enter Dash Owned"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/enter_ltc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_xrp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/litecoin"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/enter_ltc"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginEnd="24dp"
        android:hint="Enter LTC Owned"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/enter_ukg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_dash" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/unikoingold"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/enter_ukg"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginEnd="24dp"
        android:hint="Enter UKG Owned"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_ltc" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/colorAccent"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="Dash (DASH)"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</android.support.constraint.ConstraintLayout>
